# src/routes/shipping.js
@@ -3,9 +3,13 @@ const ShippingController = require("../controllers/shippingController");
 
 const router = express.Router();
 
-router.get("/", ShippingController.getAllShipping);
+router.get("/customer/:customerId", ShippingController.getShippingByCustomerId);
+router.get('/customer-status/:customerId/:status', ShippingController.getShippingByCustomerAndStatus);
 router.put("/update-status/:id", ShippingController.updateStatusShipping);
 router.put("/update-reason/:id", ShippingController.updateReasonShipping);
+router.get("/status/:status", ShippingController.getShippingByStatus);
 router.get("/order/:order_id", ShippingController.getShippingByOrderId);
+
+router.get("/", ShippingController.getAllShipping);
 
 module.exports = router;
